Fixed phone spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,11 @@ footer {
 	.logo {
 		width: 170px;
 		margin-top: 11px;
-		margin-left: 20px;
+		margin-left: 10px;
+	}
+
+	.btn-group {
+		margin-right: 70px;
 	}
 
 	.topbar {
